--- a/06/scss/_small.scss
+++ b/06/scss/_small.scss
@@ -103,9 +103,10 @@ html {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  //justify-content: center;
   margin: 1rem 0;
   padding: 0 8px;
+
 }
 .column {
   padding: 0 8px;
@@ -143,7 +144,7 @@ html {
     height: auto;
   }
   #mainWrapper {
-    display: flex;
+    //display: flex;
     margin: 0;
     padding: 0;
   
@@ -163,158 +164,7 @@ html {
   }
   
 
-  //cards
-  div.cards {
-    padding: 0 $gutter;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(230px,1fr));
-    gap: 24px 8px;
-    //width: fit-content;
-    //justify-items: center;
   
-    
-  section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 15rem;
-    width: auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    overflow: hidden;
-    margin: 1rem 0;
-    //background-color: $tertiaryColor;
-    h2, p, a {
-      margin: 0;
-      padding: .75rem $gutter;
-    }
-    h2 {
-      text-align: center;
-      font-size: 1.5rem;
-    }
-    img {
-      width: 50px;
-      justify-content: center;
-      align-items:center;
-      margin: .5rem;
-      position: relative;
-      //display: block;
-    }
-    p {
-      //font-style: italic;
-      text-align: left;
-    }
-    button {
-      display: block;
-      color: rgba(225, 48, 48);
-      font-style: oblique;
-      text-align: right;
-      background-color: rgba(225, 48, 48, 0.1);
-      padding: .5rem 1rem .5rem 1rem;
-      margin: .5rem;
-      border: none;
-      border-radius: 10px;
-    }
-    a {
-      align-content: center;
-    }
-  }
-    .shape {
-      width: 50px;
-      height: 50px;
-      padding: 5px;
-      border-radius: 10px;
-      //border: black 1px solid;
-      //margin: auto;
-      background-color: white;
-    }
-    .bounce:hover img {animation: myBounce 1s 1;}
-    .spin:hover img {animation: mySpin 2s 6;}
-    .pulse:hover img {animation: myPulse 1s 1;}
-    .color:hover .shape {animation: myColor 5s 3;}
-      
-    //bounce
-    @keyframes myBounce {
-      0%, 100% {
-        top: 0;
-        animation-timing-function: ease-in-out;
-      }
-      25%, 75% {
-        top: 20px;
-        animation-timing-function: ease-in-out;
-      }
-      50% {
-        top: 10px;
-        animation-timing-function: ease-in-out;
-      }
-    }
-
-    //spin
-    @keyframes mySpin {
-      from {
-        transform: rotate(0deg);
-      }
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    //pulse
-    @keyframes myPulse {
-      0%, 100% {
-        transform: scale(1);
-      }
-      50% {
-        transform: scale(1.2);
-      }
-    }
-
-    //color
-    @keyframes myColor {
-      0% {background-color: white;}
-      15% {background-color: red;}
-      30% {background-color: orange;}
-      45% {background-color: yellow;}
-      60% {background-color: green;}
-      75% {background-color: blue;}
-      90% {background-color: indigo;}
-      100% {background-color: white;}
-    }
-  }
-//}
-
-
-//reveiws
-div.reviewWrapper {
-  background-color: rgb(159, 21, 21);
-  padding: 2rem 0;
-  text-align: center;
-  color: $primaryColor;
-}
-div#reviews {
-  text-align: center;
-  //display: ;
-  //flex-wrap: wrap;
-  
-  section {
-    //border: 1px solid $primaryColor;
-    margin: 10px;
-    padding: 8px;
-    max-width: 100%;
-    text-align: center;
-    //justify-content: center;
-
-    img {
-      width: 20px;
-    }
-    h3 {
-    margin: 2rem $gutter 0 $gutter;
-    text-align: center;
-    font-weight: $boldWeight;
-    }
-  }
-}
 
   // begin footer
 #footerWrapper {
